# oarepo-model-builder

./: .gitignore  LICENSE  MANIFEST.in  README.md  SCHEMA.md  TEST_LOG.TXT  format.sh  make_toc.sh  pyproject.toml  run-tests.sh  run-tests2.sh  sample_data.yaml  schema-dump.json5  setup.cfg  test.json5  test.txt  totest.txt
.github/workflows/: build.yaml  main.yml  manual.yaml  push.yaml
docs/: community_draft_replacement.md  extending-api.md  extending-builder.md  extending-property.md  extension-packaging.md  model-elasticsearch-settings.md  model-generic-settings.md  model-plugins.md  model-python-settings.md  model.json5  model.md  model2.json5  oarepo-model-builder.drawio  settings-python.md  test.yaml  using-api.md
docs/examples/: complete.yaml
oarepo_model_builder/: __init__.py  api.py  builder.py  cli.py  conflict_resolvers.py  entrypoints.py  errors.py  exceptions.py  ext.py  fs.py  generate_doc.py  merger.py  output.py  proxies.py  schema.py  stack.py
oarepo_model_builder/builders/: __init__.py  cookiecutter.py  element.py  extend.py  inherited_model.py  inherited_model_saver.py  json.py  json_base.py  jsonschema.py  jsonschema_builder.py  mapping.py  model_saver.py  output.py  poetry.py  pyproject_toml.py  python.py  python_structure.py  setup_cfg.py  setup_py.py  setupcfg.py  source.py  ui.py  ui_builder.py  utils.py
oarepo_model_builder/builtin_models/: doi.json  invenio.json  oaipmh.json  rdm.json  registration.py
oarepo_model_builder/components/: __init__.py  facets.py  sample.py
oarepo_model_builder/components/model/: sample.py
oarepo_model_builder/config/: __init__.py  default.json
oarepo_model_builder/datatypes/: __init__.py  containers.py  datatypes.py  dates.py  model.py  primitive_types.py  strings.py
oarepo_model_builder/datatypes/components/: __init__.py  enum.py  facets.py  marshmallow.py  sample.py  ui.py
oarepo_model_builder/invenio/: __init__.py  edtf_interval_dumper.py  invenio_api_views.py  invenio_app_views.py  invenio_base.py  invenio_blueprint.py  invenio_cli.py  invenio_cli_setup_cfg.py  invenio_config.py  invenio_ext.py  invenio_ext_poetry.py  invenio_ext_resource.py  invenio_ext_setup_cfg.py  invenio_proxies.py  invenio_record.py  invenio_record_dumper.py  invenio_record_facets.py  invenio_record_item.py  invenio_record_jsonschemas_poetry.py  invenio_record_jsonschemas_setup_cfg.py  invenio_record_list.py  invenio_record_marshmallow.py  invenio_record_metadata.py  invenio_record_metadata_alembic_poetry.py  invenio_record_metadata_alembic_setup_cfg.py  invenio_record_metadata_models_poetry.py  invenio_record_metadata_models_setup_cfg.py  invenio_record_permissions.py  invenio_record_pid_provider.py  invenio_record_resource.py  invenio_record_resource_config.py  invenio_record_resource_poetry.py  invenio_record_resource_setup_cfg.py  invenio_record_schema.py  invenio_record_search.py  invenio_record_search_options.py  invenio_record_search_poetry.py  invenio_record_search_setup_cfg.py  invenio_record_service.py  invenio_record_service_config.py  (+12 more)
oarepo_model_builder/loaders/: __init__.py  extend.py
oarepo_model_builder/model_preprocessors/: __init__.py  datatype_default.py  default_values.py  elasticsearch.py  extend.py  invenio.py  invenio_base_classes.py  opensearch.py
oarepo_model_builder/oarepo_records_resources/: oarepo_records_resources_setup_cfg.py
oarepo_model_builder/outputs/: __init__.py  cfg.py  diff.py  json.py  json_stack.py  jsonschema.py  mapping.py  output.py  python.py  text.py  toml.py  toml_output.py  ui.py  yaml.py
oarepo_model_builder/preprocessors/: __init__.py  text_keyword.py
oarepo_model_builder/profiles/: __init__.py  extend.py  model.py  record.py
oarepo_model_builder/property_preprocessors/: __init__.py  datatype_preprocessor.py  date.py  enum.py  extend.py  inherited_model.py  marshmallow_class_generator.py  marshmallow_validators_generator.py  number.py  raw.py  text_keyword.py  type_shortcuts.py
oarepo_model_builder/schema/: loader.py  schema.py  utils.py  value.py  yaml_parser.py
oarepo_model_builder/settings/: opensearch.json  python.json
oarepo_model_builder/stack/: __init__.py  schema.py  stack.py
oarepo_model_builder/templates/: __init__.py
oarepo_model_builder/transformers/: __init__.py  default_values.py  elasticsearch.py  invenio.py
oarepo_model_builder/utils/: absolute_class.py  camelcase.py  cst.py  deepmerge.py  dict.py  facet_helpers.py  hyphen_munch.py  import_class.py  jinja.py  json_pathlib.py  links.py  properties.py  python_name.py  schema.py  stack.py  verbose.py
oarepo_model_builder/validation/: __init__.py  extensibility.py  model.py  model_defaults.py  model_plugins.py  model_validation.py  object.py  plugins.py  properties.py  property.py  property_facets.py  property_jsonschema.py  property_mapping.py  property_marshmallow.py  property_sample_data.py  property_sortable.py  registration.py  root.py  settings.py  ui.py  utils.py
tests/: complex-model.yaml  conftest.py  faker_constant.py  mock_filesystem.py  mock_open.py  multilang.py  test_builder.py  test_builder_from_entrypoints.py  test_cfg_builders.py  test_datatype_prepare.py  test_datatype_validator.py  test_dependencies.py  test_empty_metadata.py  test_expandable_fields.py  test_extend.py  test_facets.py  test_fulltext_keyword.py  test_include_components.py  test_include_doi.py  test_is_schema_element.py  test_json_pathlib.py  test_json_stack.py  test_jsonchema_builder.py  test_jsonschema_output.py  test_loader.py  test_loading.py  test_mapping_builder.py  test_marshmallow_builder.py  test_marshmallow_ui_builder.py  test_merge.py  test_merging_transformer.py  test_model_saver.py  test_oarepo_model_builder.py  test_overwrite.py  test_pid_provider.py  test_plugin_configuration.py  test_python_mergers.py  test_python_qn.py  test_pythonoutput.py  test_raw.py  (+10 more)
tests-model/: test_running_server.py
tests/api/: conftest.py  helpers.py  test_api.py  test_builder.py  test_jsonschema.py  test_mapping.py  test_output.py  test_ui.py
tests/api/datamodels/: test.json5  (+3 more)
tests/certs/: test.crt  test.key
(+134 files in other folders)
