[tool.poetry]
name = "oarepo-model-builder"
version = "0.1.7"
description = "An utility library that generates OARepo required data model files from a JSON specification file"
authors = ["Miroslav Bauer <bauer@cesnet.cz>"]
readme = "README.md"

packages = [
    { include = "oarepo_model_builder" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
json5 = { version = "^0.9.6", optional = true }
libcst = "^0.3.19"
click = ">=7.1"
tomlkit = "^0.7.2"
jsonpointer = "^2.2"
deepdiff = "^5.6.0"
PyYAML = { version = "^6.0", optional = true }
Jinja2 = "^3.0.3"
munch = "^2.5.0"
isort = "^5.10.1"
black = "^21.11b1"

[tool.poetry.extras]
json5 = ["json5"]
pyyaml = ["pyyaml"]

[tool.poetry.dev-dependencies]
pytest = "^6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."oarepo_model_builder.builders"]
01-jsonschema = "oarepo_model_builder.builders.jsonschema:JSONSchemaBuilder"
10-mapping = "oarepo_model_builder.builders.mapping:MappingBuilder"
20-python_structure = "oarepo_model_builder.builders.python_structure:PythonStructureBuilder"
50-invenio_record = "oarepo_model_builder.invenio.invenio_record:InvenioRecordBuilder"
60-invenio_record_metadata = "oarepo_model_builder.invenio.invenio_record_metadata:InvenioRecordMetadataBuilder"

[tool.poetry.plugins."oarepo_model_builder.ouptuts"]
jsonschema = "oarepo_model_builder.outputs.jsonschema:JSONSchemaOutput"
mapping = "oarepo_model_builder.outputs.mapping:MappingOutput"
python = "oarepo_model_builder.outputs.python:PythonOutput"

[tool.poetry.plugins."oarepo_model_builder.property_preprocessors"]
10-text_keyword = "oarepo_model_builder.property_preprocessors.text_keyword:TextKeywordPreprocessor"

[tool.poetry.plugins."oarepo_model_builder.model_preprocessors"]
01-default = "oarepo_model_builder.model_preprocessors.default_values:DefaultValuesModelPreprocessor"
10-invenio = "oarepo_model_builder.model_preprocessors.invenio:InvenioModelPreprocessor"
20-elasticsearch = "oarepo_model_builder.model_preprocessors.elasticsearch:ElasticsearchModelPreprocessor"

[tool.poetry.plugins."oarepo_model_builder.loaders"]
json = "oarepo_model_builder.loaders:json_loader"
json5 = "oarepo_model_builder.loaders:json_loader"
yaml = "oarepo_model_builder.loaders:yaml_loader"
yml = "oarepo_model_builder.loaders:yaml_loader"

[tool.poetry.plugins."oarepo_model_builder.templates"]
99-base_templates = "oarepo_model_builder.invenio"


[tool.poetry.scripts]
oarepo-compile-model = "oarepo_model_builder.cli:run"
