[tool.poetry]
name = "oarepo-model-builder"
version = "0.9.5"
description = "An utility library that generates OARepo required data model files from a JSON specification file"
authors = ["Miroslav Bauer <bauer@cesnet.cz>", "Miroslav Simek <simeki@vscht.cz>"]
readme = "README.md"

packages = [
    { include = "oarepo_model_builder" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
json5 = { version = "^0.9.6" }
libcst = "^0.3.19"
click = ">=7.1"
tomlkit = "^0.7.2"
jsonpointer = "^2.2"
deepdiff = "^5.6.0"
PyYAML = { version = "^6.0" }
Jinja2 = "^3.0.3"
munch = "^2.5.0"
isort = "^5.10.1"
black = "^21.11b1"

[tool.poetry.dev-dependencies]
pytest = "^6"
md-toc = "^8.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."oarepo_model_builder.builders"]
020-jsonschema = "oarepo_model_builder.builders.jsonschema:JSONSchemaBuilder"
030-mapping = "oarepo_model_builder.builders.mapping:MappingBuilder"

050-poetry = "oarepo_model_builder.builders.poetry:PoetryBuilder"

100-python_structure = "oarepo_model_builder.builders.python_structure:PythonStructureBuilder"
110-invenio_record = "oarepo_model_builder.invenio.invenio_record:InvenioRecordBuilder"
120-invenio_record_metadata = "oarepo_model_builder.invenio.invenio_record_metadata:InvenioRecordMetadataBuilder"
130-invenio_record_schema = "oarepo_model_builder.invenio.invenio_record_schema:InvenioRecordSchemaBuilder"

200-invenio_record_permissions = "oarepo_model_builder.invenio.invenio_record_permissions:InvenioRecordPermissionsBuilder"

300-invenio_record_search_options = "oarepo_model_builder.invenio.invenio_record_search:InvenioRecordSearchOptionsBuilder"
310-invenio_record_service_config = "oarepo_model_builder.invenio.invenio_record_service_config:InvenioRecordServiceConfigBuilder"
320-invenio_record_service = "oarepo_model_builder.invenio.invenio_record_service:InvenioRecordServiceBuilder"
340-invenio_record_dumper = "oarepo_model_builder.invenio.invenio_record_dumper:InvenioRecordDumperBuilder"

400-invenio_record_resource_config = "oarepo_model_builder.invenio.invenio_record_resource_config:InvenioRecordResourceConfigBuilder"
410-invenio_record_resource = "oarepo_model_builder.invenio.invenio_record_resource:InvenioRecordResourceBuilder"
420-invenio_views = "oarepo_model_builder.invenio.invenio_views:InvenioViewsBuilder"

500-invenio_config = "oarepo_model_builder.invenio.invenio_config:InvenioConfigBuilder"

600-invenio_ext = "oarepo_model_builder.invenio.invenio_ext:InvenioExtBuilder"
610-invenio_ext_poetry = "oarepo_model_builder.invenio.invenio_ext_poetry:InvenioExtPoetryBuilder"

700-invenio_ext = "oarepo_model_builder.invenio.invenio_proxies:InvenioProxiesBuilder"

900-invenio_sample_app_poetry = "oarepo_model_builder.invenio.invenio_sample_app_poetry:InvenioSampleAppPoetryBuilder"
910-invenio_record_metadata_alembic_poetry = "oarepo_model_builder.invenio.invenio_record_metadata_alembic_poetry:InvenioRecordMetadataAlembicPoetryBuilder"
920-invenio_record_metadata_models_poetry = "oarepo_model_builder.invenio.invenio_record_metadata_models_poetry:InvenioRecordMetadataModelsPoetryBuilder"
930-invenio_resource_poetry = "oarepo_model_builder.invenio.invenio_record_resource_poetry:InvenioRecordResourcePoetryBuilder"
940-invenio_record_search_poetry = "oarepo_model_builder.invenio.invenio_record_search_poetry:InvenioRecordSearchPoetryBuilder"
950-invenio_record_jsonschemas_poetry = "oarepo_model_builder.invenio.invenio_record_jsonschemas_poetry:InvenioRecordJSONSchemasPoetryBuilder"


[tool.poetry.plugins."oarepo_model_builder.ouptuts"]
jsonschema = "oarepo_model_builder.outputs.jsonschema:JSONSchemaOutput"
mapping = "oarepo_model_builder.outputs.mapping:MappingOutput"
python = "oarepo_model_builder.outputs.python:PythonOutput"
toml = "oarepo_model_builder.outputs.toml:TOMLOutput"

[tool.poetry.plugins."oarepo_model_builder.property_preprocessors"]
100-type_shortcuts = "oarepo_model_builder.property_preprocessors.type_shortcuts:TypeShortcutsPreprocessor"
500-text_keyword = "oarepo_model_builder.property_preprocessors.text_keyword:TextKeywordPreprocessor"
600-date = "oarepo_model_builder.property_preprocessors.date:DatePreprocessor"

[tool.poetry.plugins."oarepo_model_builder.model_preprocessors"]
01-default = "oarepo_model_builder.model_preprocessors.default_values:DefaultValuesModelPreprocessor"
10-invenio = "oarepo_model_builder.model_preprocessors.invenio:InvenioModelPreprocessor"
20-elasticsearch = "oarepo_model_builder.model_preprocessors.elasticsearch:ElasticsearchModelPreprocessor"

[tool.poetry.plugins."oarepo_model_builder.loaders"]
json = "oarepo_model_builder.loaders:json_loader"
json5 = "oarepo_model_builder.loaders:json_loader"
yaml = "oarepo_model_builder.loaders:yaml_loader"
yml = "oarepo_model_builder.loaders:yaml_loader"

[tool.poetry.plugins."oarepo_model_builder.templates"]
99-base_templates = "oarepo_model_builder.invenio"

[tool.poetry.plugins."oarepo.models"]
invenio = "oarepo_model_builder.builtin_models:invenio.json"

[tool.poetry.scripts]
oarepo-compile-model = "oarepo_model_builder.cli:run"
