[tool.poetry]
name = "oarepo-model-builder"
version = "0.9.35"
description = "An utility library that generates OARepo required data model files from a JSON specification file"
authors = ["Miroslav Bauer <bauer@cesnet.cz>", "Miroslav Simek <simeki@vscht.cz>"]
readme = "README.md"

packages = [
    { include = "oarepo_model_builder" }
]


[tool.poetry.dependencies]
python = ">=3.10,<4.0"
json5 = { version = "^0.9.6" }
libcst = ">=0.3.19"
click = ">=7.1"
tomlkit = ">=0.7.2"
jsonpointer = "^2.2"
deepdiff = "^5.6.0"
PyYAML = { version = "^6.0" }
Jinja2 = "^3.0.3"
munch = "^2.5.0"
isort = "^5.10.1"
black = ">21.11b1"
Faker = ">11.3.0"
lazy-object-proxy = "^1.7.1"
jsonschema = {extras = ["format"], version = "^4.4.0"}

[tool.poetry.dev-dependencies]
pytest = "^6"
md-toc = "^8.1.0"
pytest-mock = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

##
## black, isort
##

[tool.isort]
profile = "black"
skip_gitignore = true
line_length = 120

[tool.black]
line-length = 120


##
## plugin registration
##

[tool.poetry.plugins."oarepo_model_builder.builders"]
0020-jsonschema = "oarepo_model_builder.builders.jsonschema:JSONSchemaBuilder"
0030-mapping = "oarepo_model_builder.builders.mapping:MappingBuilder"

0050-poetry = "oarepo_model_builder.builders.poetry:PoetryBuilder"

0100-python_structure = "oarepo_model_builder.builders.python_structure:PythonStructureBuilder"
0110-invenio_record = "oarepo_model_builder.invenio.invenio_record:InvenioRecordBuilder"
0120-invenio_record_metadata = "oarepo_model_builder.invenio.invenio_record_metadata:InvenioRecordMetadataBuilder"
0130-invenio_record_schema = "oarepo_model_builder.invenio.invenio_record_schema:InvenioRecordSchemaBuilder"

0200-invenio_record_permissions = "oarepo_model_builder.invenio.invenio_record_permissions:InvenioRecordPermissionsBuilder"

0300-invenio_record_search_options = "oarepo_model_builder.invenio.invenio_record_search:InvenioRecordSearchOptionsBuilder"
0310-invenio_record_service_config = "oarepo_model_builder.invenio.invenio_record_service_config:InvenioRecordServiceConfigBuilder"
0320-invenio_record_service = "oarepo_model_builder.invenio.invenio_record_service:InvenioRecordServiceBuilder"
0340-invenio_record_dumper = "oarepo_model_builder.invenio.invenio_record_dumper:InvenioRecordDumperBuilder"

0400-invenio_record_resource_config = "oarepo_model_builder.invenio.invenio_record_resource_config:InvenioRecordResourceConfigBuilder"
0410-invenio_record_resource = "oarepo_model_builder.invenio.invenio_record_resource:InvenioRecordResourceBuilder"
0420-invenio_views = "oarepo_model_builder.invenio.invenio_views:InvenioViewsBuilder"

0500-invenio_config = "oarepo_model_builder.invenio.invenio_config:InvenioConfigBuilder"

0600-invenio_ext = "oarepo_model_builder.invenio.invenio_ext:InvenioExtBuilder"
0610-invenio_ext_poetry = "oarepo_model_builder.invenio.invenio_ext_poetry:InvenioExtPoetryBuilder"

0700-invenio_ext = "oarepo_model_builder.invenio.invenio_proxies:InvenioProxiesBuilder"

0900-invenio_sample_app_poetry = "oarepo_model_builder.invenio.invenio_sample_app_poetry:InvenioSampleAppPoetryBuilder"
0910-invenio_record_metadata_alembic_poetry = "oarepo_model_builder.invenio.invenio_record_metadata_alembic_poetry:InvenioRecordMetadataAlembicPoetryBuilder"
0920-invenio_record_metadata_models_poetry = "oarepo_model_builder.invenio.invenio_record_metadata_models_poetry:InvenioRecordMetadataModelsPoetryBuilder"
0930-invenio_resource_poetry = "oarepo_model_builder.invenio.invenio_record_resource_poetry:InvenioRecordResourcePoetryBuilder"
0940-invenio_record_search_poetry = "oarepo_model_builder.invenio.invenio_record_search_poetry:InvenioRecordSearchPoetryBuilder"
0950-invenio_record_jsonschemas_poetry = "oarepo_model_builder.invenio.invenio_record_jsonschemas_poetry:InvenioRecordJSONSchemasPoetryBuilder"

1000-invenio_script_bootstrap = "oarepo_model_builder.invenio.invenio_script_bootstrap:InvenioScriptBootstrapBuilder"
1010-invenio_script_runserver = "oarepo_model_builder.invenio.invenio_script_runserver:InvenioScriptRunServerBuilder"
1020-invenio_script_import_sample_data = "oarepo_model_builder.invenio.invenio_script_import_sample_data:InvenioScriptImportSampleDataBuilder"
1030-invenio_script_sample_data = "oarepo_model_builder.invenio.invenio_script_sample_data:InvenioScriptSampleDataBuilder"
1040-invenio_script_sample_data_shell = "oarepo_model_builder.invenio.invenio_script_sample_data:InvenioScriptSampleDataShellBuilder"


[tool.poetry.plugins."oarepo_model_builder.outputs"]
json = "oarepo_model_builder.outputs.json:JSONOutput"
jsonschema = "oarepo_model_builder.outputs.jsonschema:JSONSchemaOutput"
mapping = "oarepo_model_builder.outputs.mapping:MappingOutput"
python = "oarepo_model_builder.outputs.python:PythonOutput"
toml = "oarepo_model_builder.outputs.toml:TOMLOutput"
diff = "oarepo_model_builder.outputs.diff:DiffOutput"
text = "oarepo_model_builder.outputs.text:TextOutput"
yaml = "oarepo_model_builder.outputs.yaml:YAMLOutput"

[tool.poetry.plugins."oarepo_model_builder.property_preprocessors"]
100-type_shortcuts = "oarepo_model_builder.property_preprocessors.type_shortcuts:TypeShortcutsPreprocessor"
200-enum = "oarepo_model_builder.property_preprocessors.enum:EnumPreprocessor"
500-text_keyword = "oarepo_model_builder.property_preprocessors.text_keyword:TextKeywordPreprocessor"
600-date = "oarepo_model_builder.property_preprocessors.date:DatePreprocessor"
700-number = "oarepo_model_builder.property_preprocessors.number:NumberPreprocessor"
700-marshmallow-class = "oarepo_model_builder.property_preprocessors.marshmallow_class_generator:MarshmallowClassGeneratorPreprocessor"

[tool.poetry.plugins."oarepo_model_builder.model_preprocessors"]
01-default = "oarepo_model_builder.model_preprocessors.default_values:DefaultValuesModelPreprocessor"
10-invenio = "oarepo_model_builder.model_preprocessors.invenio:InvenioModelPreprocessor"
20-elasticsearch = "oarepo_model_builder.model_preprocessors.elasticsearch:ElasticsearchModelPreprocessor"

[tool.poetry.plugins."oarepo_model_builder.loaders"]
json = "oarepo_model_builder.loaders:json_loader"
json5 = "oarepo_model_builder.loaders:json_loader"
yaml = "oarepo_model_builder.loaders:yaml_loader"
yml = "oarepo_model_builder.loaders:yaml_loader"

[tool.poetry.plugins."oarepo_model_builder.templates"]
99-base_templates = "oarepo_model_builder.invenio"

[tool.poetry.plugins."oarepo.models"]
invenio = "oarepo_model_builder.builtin_models:invenio.json"

[tool.poetry.plugins."oarepo.model_schemas"]
es-strings = "oarepo_model_builder.validation.schemas:es_strings.json5"
date = "oarepo_model_builder.validation.schemas:date.json5"
marshmallow = "oarepo_model_builder.validation.schemas:marshmallow.json5"
settings = "oarepo_model_builder.validation.schemas:settings.json5"
modelschema = "oarepo_model_builder.validation.schemas:modelschema.json5"
elasticsearch = "oarepo_model_builder.validation.schemas:elasticsearch.json5"
faker = "oarepo_model_builder.validation.schemas:faker.json5"
mapping = "oarepo_model_builder.validation.schemas:mapping.json5"
facets = "oarepo_model_builder.validation.schemas:facets.json5"
sort = "oarepo_model_builder.validation.schemas:sort.json5"
plugins = "oarepo_model_builder.validation.schemas:plugins.json5"

[tool.poetry.scripts]
oarepo-compile-model = "oarepo_model_builder.cli:run"
