[metadata]
name = oarepo-model-builder
version = 1.0.0a8
description = An utility library that generates OARepo required data model files from a JSON specification file
authors = Miroslav Bauer <bauer@cesnet.cz>, Miroslav Simek <simeki@vscht.cz>
readme = README.md
long_description = file:README.md
long_description_content_type = text/markdown


[options]
python = >=3.9
install_requires =
    ConfigUpdater>=3.1.1<4.0.0
    Faker>11.3.0
    Jinja2>=3.0.3<4.0.0
    PyYAML>=6.0<7.0
    black>21.11b1
    click>=7.1
    deepdiff>=5.6.0<6.0.0
    isort>=5.10.1<6.0.0
    json5>=0.9.6<0.10.0
    jsonpointer>=2.2<3.0
    jsonschema[format]>=4.4.0<5.0.0
    lazy-object-proxy>=1.7.1<2.0.0
    libcst>=0.3.19
    munch>=2.5.0<3.0.0
    tomlkit>=0.7.2
    importlib_metadata>=4.0.0

[options.extras_require]
devs =
    pytest>=7.1.2
tests =
    pytest>=7.1.2

[options.package_data]
* = *.json, *.rst, *.md, *.json5, *.jinja2

[options.entry_points]
console_scripts = 
    oarepo-compile-model = oarepo_model_builder.cli:run

# model schemas are generic, same for all profiles
oarepo.model_schemas = 
    date = oarepo_model_builder.validation.schemas:date.json5
    opensearch  = oarepo_model_builder.validation.schemas:opensearch.json5
    es-strings  = oarepo_model_builder.validation.schemas:es_strings.json5
    facets  = oarepo_model_builder.validation.schemas:facets.json5
    faker  = oarepo_model_builder.validation.schemas:faker.json5
    mapping  = oarepo_model_builder.validation.schemas:mapping.json5
    marshmallow  = oarepo_model_builder.validation.schemas:marshmallow.json5
    modelschema  = oarepo_model_builder.validation.schemas:modelschema.json5
    plugins  = oarepo_model_builder.validation.schemas:plugins.json5
    settings  = oarepo_model_builder.validation.schemas:settings.json5
    sort  = oarepo_model_builder.validation.schemas:sort.json5

# models are generic, same for all profiles
oarepo.models =
    invenio  = oarepo_model_builder.builtin_models:invenio.json

# builders are profile dependent
oarepo_model_builder.builders.model =
    0020-jsonschema  = oarepo_model_builder.builders.jsonschema:JSONSchemaBuilder
    0030-mapping  = oarepo_model_builder.builders.mapping:MappingBuilder
    0050-setup-cfg  = oarepo_model_builder.builders.setup_cfg:SetupCfgBuilder
    0060-setup-py  = oarepo_model_builder.builders.setup_py:SetupPyBuilder
    0070-pyproject-toml  = oarepo_model_builder.builders.pyproject_toml:PyprojectTOMLBuilder
    0100-python_structure  = oarepo_model_builder.builders.python_structure:PythonStructureBuilder
    0110-invenio_record  = oarepo_model_builder.invenio.invenio_record:InvenioRecordBuilder
    0120-invenio_record_metadata  = oarepo_model_builder.invenio.invenio_record_metadata:InvenioRecordMetadataBuilder
    0130-invenio_record_schema  = oarepo_model_builder.invenio.invenio_record_schema:InvenioRecordSchemaBuilder
    0200-invenio_record_permissions  = oarepo_model_builder.invenio.invenio_record_permissions:InvenioRecordPermissionsBuilder
    0300-invenio_record_search_options  = oarepo_model_builder.invenio.invenio_record_search:InvenioRecordSearchOptionsBuilder
    0310-invenio_record_service_config  = oarepo_model_builder.invenio.invenio_record_service_config:InvenioRecordServiceConfigBuilder
    0320-invenio_record_service  = oarepo_model_builder.invenio.invenio_record_service:InvenioRecordServiceBuilder
    0340-invenio_record_dumper  = oarepo_model_builder.invenio.invenio_record_dumper:InvenioRecordDumperBuilder
    0400-invenio_record_resource_config  = oarepo_model_builder.invenio.invenio_record_resource_config:InvenioRecordResourceConfigBuilder
    0410-invenio_record_resource  = oarepo_model_builder.invenio.invenio_record_resource:InvenioRecordResourceBuilder
    0420-invenio_views  = oarepo_model_builder.invenio.invenio_views:InvenioViewsBuilder
    0500-invenio_config  = oarepo_model_builder.invenio.invenio_config:InvenioConfigBuilder
    0600-invenio_ext  = oarepo_model_builder.invenio.invenio_ext:InvenioExtBuilder
    0610-invenio_ext_setup_cfg  = oarepo_model_builder.invenio.invenio_ext_setup_cfg:InvenioExtSetupCfgBuilder
    0700-invenio_ext  = oarepo_model_builder.invenio.invenio_proxies:InvenioProxiesBuilder
    0910-invenio_record_metadata_alembic_setup_cfg = oarepo_model_builder.invenio.invenio_record_metadata_alembic_setup_cfg:InvenioRecordMetadataAlembicSetupCfgBuilder
    0920-invenio_record_metadata_models_setup_cfg = oarepo_model_builder.invenio.invenio_record_metadata_models_setup_cfg:InvenioRecordMetadataModelsSetupCfgBuilder
    0930-invenio_resource_setup_cfg  = oarepo_model_builder.invenio.invenio_record_resource_setup_cfg:InvenioRecordResourceSetupCfgBuilder
    0940-invenio_record_search_setup_cfg  = oarepo_model_builder.invenio.invenio_record_search_setup_cfg:InvenioRecordSearchSetupCfgBuilder
    0950-invenio_record_jsonschemas_setup_cfg = oarepo_model_builder.invenio.invenio_record_jsonschemas_setup_cfg:InvenioRecordJSONSchemasSetupCfgBuilder
    1020-invenio_script_import_sample_data  = oarepo_model_builder.invenio.invenio_script_import_sample_data:InvenioScriptImportSampleDataBuilder
    1030-invenio_script_sample_data  = oarepo_model_builder.invenio.invenio_script_sample_data:InvenioScriptSampleDataBuilder
    1040-invenio_script_sample_data_shell  = oarepo_model_builder.invenio.invenio_script_sample_data:InvenioScriptSampleDataShellBuilder
    1050-invenio_version  = oarepo_model_builder.invenio.invenio_version:InvenioVersionBuilder
    2000-model_saver  = oarepo_model_builder.builders.model_saver:ModelSaverBuilder
    2010-model_registration  = oarepo_model_builder.builders.model_saver:ModelRegistrationBuilder
    2020-inherited_model = oarepo_model_builder.builders.inherited_model:InheritedModelBuilder
    3000-cli = oarepo_model_builder.invenio.invenio_cli:InvenioCliBuilder
    3010-cli_setup = oarepo_model_builder.invenio.invenio_cli_setup_cfg:InvenioCliSetupCfgBuilder

# loaders are generic
oarepo_model_builder.loaders =
    json  = oarepo_model_builder.loaders:json_loader
    json5  = oarepo_model_builder.loaders:json_loader
    yaml  = oarepo_model_builder.loaders:yaml_loader
    yml  = oarepo_model_builder.loaders:yaml_loader

# model preprocessors are registered per profile
oarepo_model_builder.model_preprocessors.model =
    01-default  = oarepo_model_builder.model_preprocessors.default_values:DefaultValuesModelPreprocessor
    10-invenio  = oarepo_model_builder.model_preprocessors.invenio:InvenioModelPreprocessor
    20-opensearch  = oarepo_model_builder.model_preprocessors.opensearch:OpensearchModelPreprocessor

# outputs are generic, profile independent
oarepo_model_builder.outputs =
    cfg  = oarepo_model_builder.outputs.cfg:CFGOutput
    diff  = oarepo_model_builder.outputs.diff:DiffOutput
    json  = oarepo_model_builder.outputs.json:JSONOutput
    jsonschema  = oarepo_model_builder.outputs.jsonschema:JSONSchemaOutput
    mapping  = oarepo_model_builder.outputs.mapping:MappingOutput
    python  = oarepo_model_builder.outputs.python:PythonOutput
    text  = oarepo_model_builder.outputs.text:TextOutput
    toml  = oarepo_model_builder.outputs.toml:TOMLOutput
    yaml  = oarepo_model_builder.outputs.yaml:YAMLOutput

# property preprocessors are per profile
oarepo_model_builder.property_preprocessors.model =
    100-type_shortcuts  = oarepo_model_builder.property_preprocessors.type_shortcuts:TypeShortcutsPreprocessor
    200-enum  = oarepo_model_builder.property_preprocessors.enum:EnumPreprocessor
    500-text_keyword  = oarepo_model_builder.property_preprocessors.text_keyword:TextKeywordPreprocessor
    600-date  = oarepo_model_builder.property_preprocessors.date:DatePreprocessor
    700-marshmallow-class  = oarepo_model_builder.property_preprocessors.marshmallow_class_generator:MarshmallowClassGeneratorPreprocessor
    700-number  = oarepo_model_builder.property_preprocessors.number:NumberPreprocessor
    800-raw  = oarepo_model_builder.property_preprocessors.raw:RawPreprocessor
    900-validators  = oarepo_model_builder.property_preprocessors.marshmallow_validators_generator:ValidatorsPreprocessor
    1000-inherited_model_preprocessor = oarepo_model_builder.property_preprocessors.inherited_model:InheritedModelPreprocessor

# templates are generic, not per profile
oarepo_model_builder.templates =
    99-base_generic_templates  = oarepo_model_builder.builders
    99-base_invenio_templates  = oarepo_model_builder.invenio

oarepo_model_builder.profiles =
    model = oarepo_model_builder.profiles.model:ModelProfile


[tool:pytest]
testpaths =
    tests